Add header and footer

--- a/index.html
+++ b/index.html
@@ -9,6 +9,23 @@
     <script src="script.js" defer></script>
 </head>
 <body>
-    
+    <div class="container">
+        <div class="header">
+            <div class="logo">Library</div>
+            <div class="user">User</div>
+        </div>
+        <div class="bookshelf">
+            <div class="book">
+                <div class="title">The Hobbit</div>
+                <div class="author">JRR Tolkien</div>
+                <div class="pages">286</div>
+                <button>Read</button>
+                <button>Remove</button>
+            </div>
+        </div>
+        <div class="footer">
+            <button class="add">+</button>
+        </div>
+    </div>
 </body>
 </html>
