Style cards and adder button

--- a/index.html
+++ b/index.html
@@ -22,6 +22,55 @@
                 <button>Read</button>
                 <button>Remove</button>
             </div>
+            <div class="book">
+                <div class="title">The Hobbit</div>
+                <div class="author">JRR Tolkien</div>
+                <div class="pages">286</div>
+                <button>Read</button>
+                <button>Remove</button>
+            </div>
+            <div class="book">
+                <div class="title">The Hobbit</div>
+                <div class="author">JRR Tolkien</div>
+                <div class="pages">286</div>
+                <button>Read</button>
+                <button>Remove</button>
+            </div>
+            <div class="book">
+                <div class="title">The Hobbit</div>
+                <div class="author">JRR Tolkien</div>
+                <div class="pages">286</div>
+                <button>Read</button>
+                <button>Remove</button>
+            </div>
+            <div class="book">
+                <div class="title">The Hobbit</div>
+                <div class="author">JRR Tolkien</div>
+                <div class="pages">286</div>
+                <button>Read</button>
+                <button>Remove</button>
+            </div>
+            <div class="book">
+                <div class="title">The Hobbit</div>
+                <div class="author">JRR Tolkien</div>
+                <div class="pages">286</div>
+                <button>Read</button>
+                <button>Remove</button>
+            </div>
+            <div class="book">
+                <div class="title">The Hobbit</div>
+                <div class="author">JRR Tolkien</div>
+                <div class="pages">286</div>
+                <button>Read</button>
+                <button>Remove</button>
+            </div>
+            <div class="book">
+                <div class="title">The Hobbit</div>
+                <div class="author">JRR Tolkien</div>
+                <div class="pages">286</div>
+                <button>Read</button>
+                <button>Remove</button>
+            </div>
         </div>
         <div class="footer">
             <button class="add">+</button>
