--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Library</title>
     <link rel="stylesheet" href="style.css">
     <script src="script.js" defer></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="container">
@@ -73,7 +76,7 @@
             </div>
         </div>
         <div class="footer">
-            <button class="add">+</button>
+            <button class="add">ADD BOOK</button>
         </div>
     </div>
 </body>
