--- a/index.html
+++ b/index.html
@@ -13,6 +13,36 @@
 </head>
 <body>
     <div class="container">
+        <div class="modal">
+            <form action="">
+                <div class="text-input">
+                    <label for="book-title">Title:</label>
+                    <input type="text" id="book-title" name="title" required>
+                </div>
+                <div class="text-input">
+                    <label for="book-author">Author:</label>
+                    <input type="text" id="book-author" name="author" required>
+                </div>
+                <div class="text-input">
+                    <label for="book-pages">Pages:</label>
+                    <input type="number" id="book-pages" step="50" name="pages" required>
+                </div>
+                <div>
+                    <div>Have you read this book?</div>
+                    <div class="radio">
+                        <span>
+                            <label for="yes">Yes:</label>
+                            <input type="radio" name="read" id="yes" value="yes">
+                        </span>
+                        <span>
+                            <label for="no">No:</label>
+                            <input type="radio" name="read" id="no" value="no">
+                        </span>
+                    </div>
+                </div>
+                <button type="submit" class="submit-book">Add book</button>
+            </form>
+        </div>
         <div class="header">
             <div class="logo">Library</div>
             <div class="user">User</div>
