--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="container">
+    <div class="modal-bg">
         <div class="modal">
             <form action="">
                 <div class="text-input">
@@ -43,6 +43,8 @@
                 <button type="submit" class="submit-book">Add book</button>
             </form>
         </div>
+    </div>
+    <div class="container">
         <div class="header">
             <div class="logo">Library</div>
             <div class="user">User</div>
