--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <div class="modal-bg">
-        <div class="modal">
+        <div class="modal scale">
             <form action="">
                 <div class="text-input">
                     <label for="book-title">Title:</label>
@@ -25,7 +25,7 @@
                 </div>
                 <div class="text-input">
                     <label for="book-pages">Pages:</label>
-                    <input type="number" id="book-pages" step="50" name="pages" required>
+                    <input type="number" id="book-pages" step="50" min="0" max="10000" name="pages" required>
                 </div>
                 <div>
                     <div>Have you read this book?</div>
@@ -108,7 +108,14 @@
             </div>
         </div>
         <div class="footer">
-            <button class="add">ADD BOOK</button>
+            <button class="add">
+                <svg width="103" height="103" viewBox="0 0 103 103" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <circle cx="51.5" cy="51.5" r="51.5" fill="#CADAE9"/>
+                    <path d="M84 41V61H20V41H84Z" fill="#69786A"/>
+                    <path d="M42 19H62V83H42V19Z" fill="#69786A"/>
+                </svg>
+            </button>
+            
         </div>
     </div>
 </body>
