Style book buttons

--- a/index.html
+++ b/index.html
@@ -54,8 +54,10 @@
                 <div class="title">The Hobbit</div>
                 <div class="author">JRR Tolkien</div>
                 <div class="pages">286</div>
-                <button>Read</button>
-                <button>Remove</button>
+                <div class="buttons-wrapper">
+                    <button class="read book-buttons">Read</button>
+                    <button class="remove book-buttons">Remove</button>
+                </div>
             </div>
             <div class="book">
                 <div class="title">The Hobbit</div>
