--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <div class="book">
                 <div class="title">The Hobbit</div>
                 <div class="author">JRR Tolkien</div>
-                <div class="pages">286</div>
+                <div class="pages">286 pages</div>
                 <div class="buttons-wrapper">
                     <button class="read book-buttons">Read</button>
                     <button class="remove book-buttons">Remove</button>
