Add book deleter and restructure listener functions

--- a/index.html
+++ b/index.html
@@ -49,17 +49,7 @@
             <div class="logo">Library</div>
             <div class="user">User</div>
         </div>
-        <div class="bookshelf">
-            <div class="book">
-                <div class="title">The Hobbit</div>
-                <div class="author">JRR Tolkien</div>
-                <div class="pages">286 pages</div>
-                <div class="buttons-wrapper">
-                    <button class="read book-buttons read-status">Read</button>
-                    <button class="remove book-buttons">Remove</button>
-                </div>
-            </div>
-        </div>
+        <div class="bookshelf"></div>
         <div class="footer">
             <img src="add.svg" class="add">
         </div>
