--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
             <form action="">
                 <div class="text-input">
                     <label for="book-title">Title:</label>
-                    <input type="text" id="book-title" name="title" required>
+                    <input type="text" id="book-title" name="title" autocomplete="off" required>
                 </div>
                 <div class="text-input">
                     <label for="book-author">Author:</label>
-                    <input type="text" id="book-author" name="author" required>
+                    <input type="text" id="book-author" name="author" autocomplete="off" required>
                 </div>
                 <div class="text-input">
                     <label for="book-pages">Pages:</label>
