--- a/index.html
+++ b/index.html
@@ -47,10 +47,15 @@
     <div class="container">
         <div class="header">
             <div class="logo">Library</div>
-            <div class="stats-books">Stats</div>
+            <button class="stats-toggle">Stats</button>
         </div>
-        <div class="bookshelf"></div>
-        <div class="stats"></div>
+        <div class="bookshelf" style="display: block;"></div>
+        <div class="stats" style="display: none;">
+            <div class="stat books-amount">Books: </div>
+            <div class="stat read-amount">Read: </div>
+            <div class="stat unread-amount">Unread: </div>
+            <div class="stat pages-read">Total Pages Read: </div>
+        </div>
         <div class="footer">
             <img src="add.svg" class="add" title="Add Book">
         </div>
