Style stat numbers

--- a/index.html
+++ b/index.html
@@ -50,12 +50,7 @@
             <button class="stats-toggle">Stats</button>
         </div>
         <div class="bookshelf" style="display: block;"></div>
-        <div class="stats" style="display: none;">
-            <div class="stat books-amount">Books: </div>
-            <div class="stat read-amount">Read: </div>
-            <div class="stat unread-amount">Unread: </div>
-            <div class="stat pages-read">Total Pages Read: </div>
-        </div>
+        <div class="stats" style="display: none;"></div>
         <div class="footer">
             <img src="add.svg" class="add" title="Add Book">
         </div>
