--- a/index.html
+++ b/index.html
@@ -1,59 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Library</title>
-    <link rel="stylesheet" href="style.css">
-    <script src="script.js" defer></script>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Library</title>
+  <link rel="stylesheet" href="style.css">
+  <script src="script.js" defer></script>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="modal-bg" style="display: none;">
-        <div class="modal scale">
-            <form action="">
-                <div class="text-input">
-                    <label for="book-title">Title:</label>
-                    <input type="text" id="book-title" name="title" autocomplete="off" required>
-                </div>
-                <div class="text-input">
-                    <label for="book-author">Author:</label>
-                    <input type="text" id="book-author" name="author" autocomplete="off" required>
-                </div>
-                <div class="text-input">
-                    <label for="book-pages">Pages:</label>
-                    <input type="number" id="book-pages" step="1" min="0" max="10000" name="pages" required>
-                </div>
-                <div>
-                    <div>Have you read this book?</div>
-                    <div class="radio">
-                        <span>
-                            <label for="yes">Yes:</label>
-                            <input type="radio" name="read" id="yes" value="yes" required>
-                        </span>
-                        <span>
-                            <label for="no">No:</label>
-                            <input type="radio" name="read" id="no" value="no" required>
-                        </span>
-                    </div>
-                </div>
-                <button type="submit" class="submit-book">Add book</button>
-            </form>
+  <div class="modal-bg" style="display: none;">
+    <div class="modal scale">
+      <form action="">
+        <div class="text-input">
+          <label for="book-title">Title:</label>
+          <input type="text" id="book-title" name="title" autocomplete="off" required>
         </div>
+        <div class="text-input">
+          <label for="book-author">Author:</label>
+          <input type="text" id="book-author" name="author" autocomplete="off" required>
+        </div>
+        <div class="text-input">
+          <label for="book-pages">Pages:</label>
+          <input type="number" id="book-pages" step="1" min="0" max="10000" name="pages" required>
+        </div>
+        <div>
+          <div>Have you read this book?</div>
+          <div class="radio">
+            <span>
+              <label for="yes">Yes:</label>
+              <input type="radio" name="read" id="yes" value="yes" required>
+            </span>
+            <span>
+              <label for="no">No:</label>
+              <input type="radio" name="read" id="no" value="no" required>
+            </span>
+          </div>
+        </div>
+        <button type="submit" class="submit-book">Add book</button>
+      </form>
     </div>
-    <div class="container">
-        <div class="header">
-            <div class="logo">Library</div>
-            <button class="stats-toggle">Stats</button>
-        </div>
-        <div class="bookshelf" style="display: block;"></div>
-        <div class="stats" style="display: none;"></div>
-        <div class="footer">
-            <img src="add.svg" class="add" title="Add Book">
-        </div>
+  </div>
+  <div class="container">
+    <div class="header">
+      <div class="logo">Library</div>
+      <button class="stats-toggle">Stats</button>
     </div>
+    <div class="bookshelf" style="display: block;">
+      <div class="wrapper"></div>
+    </div>
+    <div class="stats" style="display: none;"></div>
+    <div class="footer">
+      <img src="add.svg" class="add" title="Add Book">
+    </div>
+  </div>
 </body>
 </html>
