Update stats and addbook buttons

--- a/index.html
+++ b/index.html
@@ -47,14 +47,15 @@
   <div class="container">
     <div class="header">
       <div class="logo">Library</div>
-      <button class="stats-toggle">Stats</button>
+      <button class="stats-toggle chart"></button>
     </div>
     <div class="bookshelf" style="display: block;">
       <div class="wrapper"></div>
     </div>
     <div class="stats" style="display: none;"></div>
     <div class="footer">
-      <img src="add.svg" class="add" title="Add Book">
+      <img src="/icons/add.svg" class="add" title="Add Book">
+      <button class="add-button">Add Book</button>
     </div>
   </div>
 </body>
