--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
       <form action="">
         <div class="text-input">
           <label for="book-title">Title:</label>
-          <input type="text" id="book-title" name="title" autocomplete="off" required>
+          <input type="text" id="book-title" name="title" autocomplete="off" maxlength="70" required>
         </div>
         <div class="text-input">
           <label for="book-author">Author:</label>
-          <input type="text" id="book-author" name="author" autocomplete="off" required>
+          <input type="text" id="book-author" name="author" autocomplete="off" maxlength="70" required>
         </div>
         <div class="text-input">
           <label for="book-pages">Pages:</label>
