Change icons and add library orderer

--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
           <div class="radio">
             <span>
               <label for="yes">Yes:</label>
-              <input type="radio" name="read" id="yes" value="yes" required>
+              <input type="radio" name="read" id="yes" value='true' required>
             </span>
             <span>
               <label for="no">No:</label>
-              <input type="radio" name="read" id="no" value="no" required>
+              <input type="radio" name="read" id="no" value='' required>
             </span>
           </div>
         </div>
