Implement title duplicate validation

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="modal scale">
       <form action="">
         <div class="text-input">
-          <label for="book-title">Title:</label>
+          <label class="btitle" for="book-title">Title:</label>
           <input type="text" id="book-title" name="title" autocomplete="off" maxlength="70" required>
         </div>
         <div class="text-input">
