--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     </div>
     <div class="stats" style="display: none;"></div>
     <div class="footer">
-      <img src="/icons/add.svg" class="add" title="Add Book">
+      <img src="icons/add.svg" class="add" title="Add Book">
       <button class="add-button">Add Book</button>
     </div>
   </div>
